Bug 217323 - keyboard not working Asus Expertbook-B1502CBA
Summary: keyboard not working Asus Expertbook-B1502CBA
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Input Devices (show other bugs)
Hardware: All Linux
: P1 blocking
Assignee: drivers_input-devices
URL:
Keywords:
: 217576 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-04-11 16:15 UTC by lorenzo
Modified: 2025-01-13 08:49 UTC (History)
8 users (show)

See Also:
Kernel Version:
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg (83.16 KB, text/plain)
2023-04-11 16:37 UTC, lorenzo
Details
dmesg ouput (133.39 KB, text/plain)
2023-04-13 01:34 UTC, seb.j
Details

Description lorenzo 2023-04-11 16:15:29 UTC
Hi Guys, i have got a problem, my keyboard is not working on my laptop asus expertbook B1502CBA, i tryed with fedora,manjaro,mint and ubuntu but nothing, at the momment i'm with ubuntu 22.04 lts kernel 6.2.9-060209-generic and still not working
i attached here below some output, thank you!

lsmod

Module                  Size  Used by
input_leds             16384  0
usbhid                 69632  0
ccm                    20480  6
rfcomm                 98304  4
snd_ctl_led            24576  0
snd_soc_skl_hda_dsp    28672  6
snd_soc_intel_hda_dsp_common    20480  1 snd_soc_skl_hda_dsp
snd_soc_hdac_hdmi      45056  1 snd_soc_skl_hda_dsp
snd_sof_probes         20480  0
snd_hda_codec_hdmi     94208  1
snd_hda_codec_realtek   192512  1
snd_hda_codec_generic   118784  1 snd_hda_codec_realtek
cmac                   16384  3
algif_hash             20480  1
algif_skcipher         16384  1
af_alg                 32768  6 algif_hash,algif_skcipher
bnep                   32768  2
snd_soc_dmic           16384  1
snd_sof_pci_intel_tgl    16384  0
snd_sof_intel_hda_common   188416  1 snd_sof_pci_intel_tgl
soundwire_intel        57344  1 snd_sof_intel_hda_common
soundwire_generic_allocation    16384  1 soundwire_intel
soundwire_cadence      40960  1 soundwire_intel
snd_sof_intel_hda      24576  1 snd_sof_intel_hda_common
snd_sof_pci            24576  2 snd_sof_intel_hda_common,snd_sof_pci_intel_tgl
snd_sof_xtensa_dsp     16384  1 snd_sof_intel_hda_common
snd_sof               311296  4 snd_sof_pci,snd_sof_intel_hda_common,snd_sof_probes,snd_sof_intel_hda
snd_sof_utils          20480  1 snd_sof
snd_soc_hdac_hda       24576  1 snd_sof_intel_hda_common
snd_hda_ext_core       36864  4 snd_sof_intel_hda_common,snd_soc_hdac_hdmi,snd_soc_hdac_hda,snd_sof_intel_hda
snd_soc_acpi_intel_match    77824  2 snd_sof_intel_hda_common,snd_sof_pci_intel_tgl
snd_soc_acpi           16384  2 snd_soc_acpi_intel_match,snd_sof_intel_hda_common
soundwire_bus         110592  3 soundwire_intel,soundwire_generic_allocation,soundwire_cadence
snd_soc_core          417792  8 soundwire_intel,snd_sof,snd_sof_intel_hda_common,snd_soc_hdac_hdmi,snd_soc_hdac_hda,snd_sof_probes,snd_soc_dmic,snd_soc_skl_hda_dsp
snd_compress           32768  2 snd_soc_core,snd_sof_probes
ac97_bus               16384  1 snd_soc_core
snd_pcm_dmaengine      20480  1 snd_soc_core
snd_hda_intel          61440  0
snd_intel_dspcfg       36864  3 snd_hda_intel,snd_sof,snd_sof_intel_hda_common
snd_intel_sdw_acpi     20480  2 snd_sof_intel_hda_common,snd_intel_dspcfg
snd_hda_codec         204800  8 snd_hda_codec_generic,snd_hda_codec_hdmi,snd_hda_intel,snd_hda_codec_realtek,snd_soc_intel_hda_dsp_common,snd_soc_hdac_hda,snd_sof_intel_hda,snd_soc_skl_hda_dsp
intel_tcc_cooling      16384  0
snd_hda_core          139264  11 snd_hda_codec_generic,snd_hda_codec_hdmi,snd_hda_intel,snd_hda_ext_core,snd_hda_codec,snd_hda_codec_realtek,snd_soc_intel_hda_dsp_common,snd_sof_intel_hda_common,snd_soc_hdac_hdmi,snd_soc_hdac_hda,snd_sof_intel_hda
x86_pkg_temp_thermal    20480  0
snd_hwdep              20480  1 snd_hda_codec
intel_powerclamp       24576  0
iwlmvm                724992  0
joydev                 32768  0
coretemp               24576  0
i915                 3866624  20
binfmt_misc            24576  1
snd_pcm               192512  12 snd_hda_codec_hdmi,snd_hda_intel,snd_hda_codec,soundwire_intel,snd_sof,snd_sof_intel_hda_common,snd_soc_hdac_hdmi,snd_compress,snd_soc_core,snd_sof_utils,snd_hda_core,snd_pcm_dmaengine
mac80211             1617920  1 iwlmvm
kvm_intel             499712  0
snd_seq_midi           20480  0
pmt_telemetry          16384  0
drm_buddy              20480  1 i915
snd_seq_midi_event     16384  1 snd_seq_midi
mei_pxp                20480  0
mei_hdcp               28672  0
pmt_class              16384  1 pmt_telemetry
intel_rapl_msr         20480  0
libarc4                16384  1 mac80211
nls_iso8859_1          16384  1
kvm                  1347584  1 kvm_intel
snd_rawmidi            53248  1 snd_seq_midi
ttm                   110592  1 i915
irqbypass              16384  1 kvm
crct10dif_pclmul       16384  1
polyval_clmulni        16384  0
drm_display_helper    212992  1 i915
polyval_generic        16384  1 polyval_clmulni
snd_seq                94208  2 snd_seq_midi,snd_seq_midi_event
uvcvideo              139264  0
cec                    94208  2 drm_display_helper,i915
ghash_clmulni_intel    16384  0
asus_nb_wmi            28672  0
sha512_ssse3           53248  0
videobuf2_vmalloc      20480  1 uvcvideo
snd_seq_device         16384  3 snd_seq,snd_seq_midi,snd_rawmidi
videobuf2_memops       20480  1 videobuf2_vmalloc
iwlwifi               569344  1 iwlmvm
rc_core                77824  1 cec
aesni_intel           397312  8
videobuf2_v4l2         36864  1 uvcvideo
snd_timer              49152  2 snd_seq,snd_pcm
asus_wmi               73728  1 asus_nb_wmi
drm_kms_helper        249856  2 drm_display_helper,i915
crypto_simd            20480  1 aesni_intel
videodev              319488  2 videobuf2_v4l2,uvcvideo
cmdlinepart            16384  0
processor_thermal_device_pci    16384  0
cryptd                 28672  3 crypto_simd,ghash_clmulni_intel
ledtrig_audio          16384  3 snd_ctl_led,snd_hda_codec_generic,asus_wmi
spi_nor               131072  0
i2c_algo_bit           16384  1 i915
rapl                   20480  0
videobuf2_common       86016  4 videobuf2_vmalloc,videobuf2_v4l2,uvcvideo,videobuf2_memops
processor_thermal_device    24576  1 processor_thermal_device_pci
sparse_keymap          16384  1 asus_wmi
snd                   135168  28 snd_ctl_led,snd_hda_codec_generic,snd_seq,snd_seq_device,snd_hda_codec_hdmi,snd_hwdep,snd_hda_intel,snd_hda_codec,snd_hda_codec_realtek,snd_sof,snd_timer,snd_soc_hdac_hdmi,snd_compress,snd_soc_core,snd_pcm,snd_rawmidi
mei_me                 57344  2
processor_thermal_rfim    28672  1 processor_thermal_device
syscopyarea            16384  1 drm_kms_helper
intel_cstate           24576  0
serio_raw              20480  0
mc                     81920  4 videodev,videobuf2_v4l2,uvcvideo,videobuf2_common
platform_profile       16384  1 asus_wmi
wmi_bmof               16384  0
cfg80211             1241088  3 iwlmvm,iwlwifi,mac80211
hid_multitouch         36864  0
mtd                   102400  3 spi_nor,cmdlinepart
soundcore              16384  2 snd_ctl_led,snd
sysfillrect            20480  1 drm_kms_helper
ucsi_acpi              16384  0
mei                   167936  5 mei_hdcp,mei_pxp,mei_me
processor_thermal_mbox    16384  2 processor_thermal_rfim,processor_thermal_device
typec_ucsi             53248  1 ucsi_acpi
sysimgblt              16384  1 drm_kms_helper
processor_thermal_rapl    20480  1 processor_thermal_device
intel_vsec             20480  0
intel_rapl_common      40960  2 intel_rapl_msr,processor_thermal_rapl
igen6_edac             24576  0
typec                 106496  1 typec_ucsi
mac_hid                16384  0
btusb                  69632  0
btrtl                  28672  1 btusb
btbcm                  28672  1 btusb
btintel                53248  1 btusb
btmtk                  16384  1 btusb
int3403_thermal        20480  0
int3400_thermal        24576  0
int340x_thermal_zone    20480  2 int3403_thermal,processor_thermal_device
acpi_pad              184320  0
acpi_thermal_rel       16384  1 int3400_thermal
acpi_tad               20480  0
bluetooth            1036288  34 btrtl,btmtk,btintel,btbcm,bnep,btusb,rfcomm
ecdh_generic           16384  2 bluetooth
ecc                    45056  1 ecdh_generic
sch_fq_codel           24576  2
msr                    16384  0
parport_pc             53248  0
ppdev                  24576  0
lp                     28672  0
drm                   692224  12 drm_kms_helper,drm_display_helper,drm_buddy,i915,ttm
parport                73728  3 parport_pc,lp,ppdev
ramoops                36864  0
pstore_blk             16384  0
reed_solomon           28672  1 ramoops
pstore_zone            36864  1 pstore_blk
efi_pstore             16384  0
ip_tables              36864  0
x_tables               65536  1 ip_tables
autofs4                57344  2
hid_generic            16384  0
nvme                   61440  2
intel_lpss_pci         28672  0
crc32_pclmul           16384  0
e1000e                352256  0
nvme_core             204800  3 nvme
i2c_i801               40960  0
spi_intel_pci          16384  0
intel_lpss             16384  1 intel_lpss_pci
xhci_pci               24576  0
spi_intel              32768  1 spi_intel_pci
i2c_smbus              20480  1 i2c_i801
idma64                 20480  0
xhci_pci_renesas       20480  1 xhci_pci
nvme_common            28672  1 nvme_core
i2c_hid_acpi           16384  0
i2c_hid                40960  1 i2c_hid_acpi
hid                   176128  4 i2c_hid,usbhid,hid_multitouch,hid_generic
video                  69632  2 asus_wmi,i915
wmi                    40960  3 video,asus_wmi,wmi_bmof
pinctrl_tigerlake      32768  0
Comment 1 lorenzo 2023-04-11 16:16:29 UTC
para@para-ASUS-EXPERTBOOK-B1502CBA-B1502CBA:~$ grep -A 40 PS2K dsdt.dsl | grep IRQ -A 1
                IRQ (Level, ActiveLow, Exclusive, )
                    {1}
Comment 2 lorenzo 2023-04-11 16:17:44 UTC
para@para-ASUS-EXPERTBOOK-B1502CBA-B1502CBA:~$ sudo dmesg | grep -i 'kbd\|i8042'
[    1.177793] i8042: PNP: PS/2 Controller [PNP0303:PS2K] at 0x60,0x64 irq 1
[    1.177796] i8042: PNP: PS/2 appears to have AUX port disabled, if this is incorrect please boot with i8042.nopnp
[    1.180747] serio: i8042 KBD port at 0x60,0x64 irq 1
Comment 3 Paul Menzel 2023-04-11 16:30:13 UTC
Please attach (not paste) the full output of `dmesg`.

    sudo dmesg > /dev/shm/linux-6.2.9-messages.txt
Comment 4 lorenzo 2023-04-11 16:37:03 UTC
Created attachment 304120 [details]
dmesg
Comment 5 Paul Menzel 2023-04-11 18:38:01 UTC
For the record, this was first reported by @lorenzo in https://bugzilla.kernel.org/show_bug.cgi?id=216158, and split out.

I sent a patch [1]. Please test it.

In Ubuntu you can build a Linux kernel yourself with:

    $ git clone https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git
    $ cd linux
    $ wget -O asus.patch https://lore.kernel.org/linux-acpi/20230411183144.6932-1-pmenzel@molgen.mpg.de/raw
    $ git am asus.patch
    $ make localmodconfig
    $ make bindeb-pkg # install missing program X with `sudo apt install X`
    $ sudo dpkg -i ../linux-image-*.deb

[1]: https://lore.kernel.org/linux-acpi/20230411183144.6932-1-pmenzel@molgen.mpg.de/T/#u
Comment 6 lorenzo 2023-04-12 10:23:04 UTC
Hi Paul, you are amazing! i'm typing with the laptop keyboard!
thank you so much!!!
Comment 7 Paul Menzel 2023-04-12 11:38:13 UTC
You are amazing for being that responsive. It’d be great, if you could answer to the patch I sent with the test tag below my Signed-off-by line.

    Tested-by: Your Name <email>

This just for completeness/for the record, as the patch was already picked up.
Comment 8 lorenzo 2023-04-12 11:54:59 UTC
ok yes, how can i do that? sorry..
Comment 9 Paul Menzel 2023-04-12 12:03:22 UTC
(In reply to lorenzo from comment #8)
> ok yes, how can i do that? sorry..

Did you receive the “patch email”, that means email with the subject tagged `[PATCH]` in your (Yahoo) inbox?
Comment 10 lorenzo 2023-04-12 12:05:26 UTC
Yes i received it
Comment 11 Paul Menzel 2023-04-12 12:09:51 UTC
Alright, then do “reply to all” and add that test line below my Signed-off-by line, but make sure you configure your email program to use plain text mode (no HTML/formatting) [1]. If your reply contains an HTML part, the Linux kernel mailing list is going to reject it.

The mailing list netiquette often asks for using interleaved style when replying [2].

[1]: https://useplaintext.email/
[2]: https://en.wikipedia.org/wiki/Posting_style#Interleaved_style
Comment 12 seb.j 2023-04-13 01:34:58 UTC
Created attachment 304128 [details]
dmesg ouput
Comment 13 seb.j 2023-04-13 01:36:48 UTC
Dear Paul,

I also come from the other thread.
My model is FA617NS.

Would be happy, if you could also help me?
dmesg is posted already above
Comment 14 Paul Menzel 2023-04-13 05:42:31 UTC
@seb, please create a separate bug report (also with Linux messages attached and DSDT snippet pasted), and reference it in bug 216158 [1].

[1]: https://bugzilla.kernel.org/show_bug.cgi?id=216158
Comment 15 seb.j 2023-04-13 06:16:28 UTC
@paul

will do in around 12 hours immediately.
nust started going for work, but it's 800km.
will follow your instructions when reach there.
Comment 16 seb.j 2023-04-14 16:31:43 UTC
Hey Paul,

Apologies for the late reply, my new thread is over here:

https://bugzilla.kernel.org/show_bug.cgi?id=217336
Comment 17 Riki 2023-06-20 11:35:24 UTC
I have the same Asus Expertbook-B1502CBA product, but I can't follow your guide, can you help me step by step?
Comment 18 Marek Šanta 2023-06-26 11:01:37 UTC
For people looking around:
It seems that the blacklist for IRQ override skip is growing rapidly. There is already a patch that just removes it because it is unsustainable. 

Hopefully landing in 6.5-rc1 and later ported to stable.

https://lore.kernel.org/linux-acpi/20230601221151.670-1-mario.limonciello@amd.com/T/#m0d32142f4cf059930e1e5a6e6e2aab2e71c5930b
Comment 19 Ivan 2023-10-08 11:10:49 UTC
@Paul Your solution in fixing for me also the keyboard in ubuntu 20.04 (with an Asus Expertbook-B1502CBA). 

But now the usb-storage module is not loaded... I guess that could it be related with "make localmodconfig" options? I have ran everything by default. Should I need to change some of the options?

Thank you!
Comment 20 Artem S. Tashkinov 2023-10-12 12:36:11 UTC
*** Bug 217576 has been marked as a duplicate of this bug. ***
Comment 21 louisa.sudrerouffaux 2023-10-18 11:30:03 UTC
Hello !
I have the same issue and I can't get it fixed.
I have tried installing new kernel version but no success (The kernel does not actually install and I don't know why)

when trying the following : 
(In reply to Paul Menzel from comment #5)
> For the record, this was first reported by @lorenzo in
> https://bugzilla.kernel.org/show_bug.cgi?id=216158, and split out.
> 
> I sent a patch [1]. Please test it.
> 
> In Ubuntu you can build a Linux kernel yourself with:
> 
>     $ git clone
> https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git
>     $ cd linux
>     $ wget -O asus.patch
> https://lore.kernel.org/linux-acpi/20230411183144.6932-1-pmenzel@molgen.mpg.
> de/raw
>     $ git am asus.patch
>     $ make localmodconfig
>     $ make bindeb-pkg # install missing program X with `sudo apt install X`
>     $ sudo dpkg -i ../linux-image-*.deb
> 
> [1]:
> https://lore.kernel.org/linux-acpi/20230411183144.6932-1-pmenzel@molgen.mpg.
> de/T/#u

I get this git error : 

$ git am asus.patch
Applying: ACPI: resource: Skip IRQ override on ASUS ExpertBook B1502CBA
error: patch failed: drivers/acpi/resource.c:432
error: drivers/acpi/resource.c: patch does not apply
Patch failed at 0001 ACPI: resource: Skip IRQ override on ASUS ExpertBook B1502CBA
hint: Use 'git am --show-current-patch' to see the failed patch
When you have resolved this problem, run "git am --continue".
If you prefer to skip this patch, run "git am --skip" instead.
To restore the original branch and stop patching, run "git am --abort".

Can anyone help me on this ? I've been trying for 3 weeks to get it to work
(context, i'm on a Asus Expertbook-B1502CBA with ubuntu 20.04.3
Thanks !
Comment 22 louisa.sudrerouffaux 2023-10-18 11:30:45 UTC
Hello !
I have the same issue and I can't get it fixed.
I have tried installing new kernel version but no success (The kernel does not actually install and I don't know why)

when trying the following : 
(In reply to Paul Menzel from comment #5)
> For the record, this was first reported by @lorenzo in
> https://bugzilla.kernel.org/show_bug.cgi?id=216158, and split out.
> 
> I sent a patch [1]. Please test it.
> 
> In Ubuntu you can build a Linux kernel yourself with:
> 
>     $ git clone
> https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git
>     $ cd linux
>     $ wget -O asus.patch
> https://lore.kernel.org/linux-acpi/20230411183144.6932-1-pmenzel@molgen.mpg.
> de/raw
>     $ git am asus.patch
>     $ make localmodconfig
>     $ make bindeb-pkg # install missing program X with `sudo apt install X`
>     $ sudo dpkg -i ../linux-image-*.deb
> 
> [1]:
> https://lore.kernel.org/linux-acpi/20230411183144.6932-1-pmenzel@molgen.mpg.
> de/T/#u

I get this git error : 

$ git am asus.patch
Applying: ACPI: resource: Skip IRQ override on ASUS ExpertBook B1502CBA
error: patch failed: drivers/acpi/resource.c:432
error: drivers/acpi/resource.c: patch does not apply
Patch failed at 0001 ACPI: resource: Skip IRQ override on ASUS ExpertBook B1502CBA
hint: Use 'git am --show-current-patch' to see the failed patch
When you have resolved this problem, run "git am --continue".
If you prefer to skip this patch, run "git am --skip" instead.
To restore the original branch and stop patching, run "git am --abort".

Can anyone help me on this ? I've been trying for 3 weeks to get it to work
(context, i'm on a Asus Expertbook-B1502CBA with ubuntu 20.04.3
Thanks !
Comment 23 Nirmal Chathura 2024-11-17 09:35:23 UTC
Hello !

I also have the same issue. 

ASUS ExpertBook B1502CV

Regards.
Comment 24 Juan Orti 2025-01-13 08:49:33 UTC
I am also having the same problems with my Asus Expertbook-B1502CVA. My ubuntu version is 24.04.1. Have you been able to solve it?

Note You need to log in before you can comment on or make changes to this bug.